frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html,
body {
	width: 100%;
	height: 100%;
	overflow: scroll;
	padding: 0;
}

#root {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	display: flex;
	align-items: center;
	flex-direction: column;
}

:root {
	font-family: "Nunito", sans-serif;
	font-optical-sizing: auto;
	line-height: 1.5;
	font-weight: 400;

	--main-blue: #3e65ee;
	--main-orange: #ff7e20;
	--main-green: #6dad1c;
	--main-white: #fefefe;
	--main-off-black: #343434;
	--main-grey: #656565;

	color-scheme: light dark;
	color: #343434;
	background-color: var(--main-white);

	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.nunito-400 {
	font-family: "Nunito", sans-serif;
	font-optical-sizing: auto;
	font-weight: 400;
	font-style: normal;
}

